--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss-nested": "^4.2.3",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
+    "vue-prlx": "^1.3.4",
     "vuebbble": "^2.7.2"
   }
 }
